--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             <div class="clearfix">
               <div class="float-left">
                 <span class="temperature" id="temperature"></span
-                ><span class="c°"<a href="javascript:convertToCelsius()" onclick="convertToCelsius();" id="convertToCelsius"> °C </a> | <a href="javascript:convertToFahrenheit() onclick="convertToFahrenheit();" id="convertToFahrenheit"> °F </a></span
+                ><span class="c°"><a href="javascript:convertToCelsius()" onclick="convertToCelsius();" id="convertToCelsius"> °C </a> | <a href="let farenheit = document.querySelector("#convertToFahrenheit");
+farenheit.addEventListener("click", convertToFahrenheit);" id="convertToFahrenheit"> °F </a></span
 									></span>
               </div>
             </div>
