--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="clearfix">
               <div class="float-left">
                 <span class="temperature" id="temperature"></span
-                ><span class="c°"><a href="javascript:convertToCelsius()" onclick="convertToCelsius();" id="convertToCelsius"> °C </a> | <a href="#" id="convertToFahrenheit"> °F </a></span
+                ><span class="c°"><a href="#" onclick="convertToCelsius();" id="convertToCelsius"> °C </a> | <a href="#" id="convertToFahrenheit"> °F </a></span
 									></span>
               </div>
             </div>
