--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<button type="button" class="btn-primary">Precipitation</button>
 		<button type="button" class="btn-primary">Wind</button>
 	</div><br><br>
-	 <div><img class="wave" src="weather.jpg" alt="temperature wave"></div>
+	 <div><img class="wave" src="thermometer.jpg" alt="temperature wave"></div>
 	<span class="daysBox">
 	<div class="days">
 		<div class="board-group">
