--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <ul>
               <li>Humidity: <span id="humidity"></span>%</li>
               <li>Wind: <span id="wind"></span> km/h</li>
-              <li>Precipitation: <span id="precipitation"></span> %</li>
+              
             </ul></br>
          	<div class="btn-group" role="group" aria-label="For weather">
 		<button type="button" class="btn-primary">Temperature</button>
@@ -72,16 +72,14 @@
 	<span class="daysBox">
 	<div class="days">
 		<div class="board-group">
-			<div class="first-board">
-				<div class="board">
+			<div class="board">
 					<div class="board-body">
 						<h5 class="board-title">Mon</h5>
 						
 						<div class="emoji">🌤</div>
 						<div class="temp">H:18° L:11°</div>
-					</div>
 				</div>
-			</div>
+			</div></span><span>
 			<div class="days">
 				<div class="board">
 					<div class="board-body">
@@ -91,7 +89,7 @@
 						<div class="temp">H:17° L:12°</div>
 					</div>
 				</div>
-			</div>
+			</div></span><span>
 			<div class="days">
 				<div class="board">
 					<div class="board-body">
@@ -101,7 +99,7 @@
 						<div class="temp">H:19° L:9°</div>
 					</div>
 				</div>
-			</div>
+			</div></span><span>
 			<div class="days">
 				<div class="board">
 					<div class="board-body">
@@ -111,7 +109,7 @@
 						<div class="temp">H:19° L:11°</div>
 					</div>
 				</div>
-			</div>
+			</div></span><span>
 			<div class="days">
 				<div class="board">
 					<div class="board-body">
@@ -137,7 +135,7 @@
   </body>
   <footer>
     <small>
-    Code by Diana Cabral <a href="https://github.com/DiMeCaCe/SheCodes02a.git">Github link</a>
+    Coded by Diana Cabral <a href="https://github.com/DiMeCaCe/SheCodes02a.git"> Github link</a>
     </small>
   </footer>
 </html>
