--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 	<span class="daysBox">
 	<div class="days">
 		<div class="board-group">
+		   <div class="first-board">
 			<div class="board">
 					<div class="board-body">
 						<h5 class="board-title">Mon</h5>
