--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="src/styles.css" />
     <title>Weather App</title>
   </head>
 
@@ -52,8 +52,8 @@
             <div class="clearfix">
               <div class="float-left">
                 <span class="temperature" id="temperature"></span
-                ><span class="c°"><a href="#" onclick="convertToCelsius();" id="convertToCelsius"> °C </a> | <a href="#" id="convertToFahrenheit"> °F </a></span
-									></span>
+                  ><span class="c°"><a href="#" onclick="convertToCelsius();" id="convertToCelsius"> °C </a> | <a href="#" id="convertToFahrenheit"> °F </a></span
+                    ></span>
               </div>
             </div>
           </div>
@@ -61,26 +61,27 @@
             <ul>
               <li>Humidity: <span id="humidity"></span>%</li>
               <li>Wind: <span id="wind"></span> km/h</li>
-              
+              <li>Precipitation: <span id="precipitation"></span> %</li>
             </ul></br>
          	<div class="btn-group" role="group" aria-label="For weather">
 		<button type="button" class="btn-primary">Temperature</button>
 		<button type="button" class="btn-primary">Precipitation</button>
 		<button type="button" class="btn-primary">Wind</button>
 	</div><br><br>
-	 <div><img class="wave" src="thermometer.jpg" alt="temperature wave"></div>
+	 <div><img class="wave" src="ola.jpg" alt="temperature wave"></div>
 	<span class="daysBox">
 	<div class="days">
 		<div class="board-group">
-		   <div class="first-board">
-			<div class="board">
+			<div class="first-board">
+				<div class="board">
 					<div class="board-body">
 						<h5 class="board-title">Mon</h5>
 						
 						<div class="emoji">🌤</div>
 						<div class="temp">H:18° L:11°</div>
+					</div>
 				</div>
-			</div></span><span>
+			</div>
 			<div class="days">
 				<div class="board">
 					<div class="board-body">
@@ -90,7 +91,7 @@
 						<div class="temp">H:17° L:12°</div>
 					</div>
 				</div>
-			</div></span><span>
+			</div>
 			<div class="days">
 				<div class="board">
 					<div class="board-body">
@@ -100,7 +101,7 @@
 						<div class="temp">H:19° L:9°</div>
 					</div>
 				</div>
-			</div></span><span>
+			</div>
 			<div class="days">
 				<div class="board">
 					<div class="board-body">
@@ -110,7 +111,7 @@
 						<div class="temp">H:19° L:11°</div>
 					</div>
 				</div>
-			</div></span><span>
+			</div>
 			<div class="days">
 				<div class="board">
 					<div class="board-body">
@@ -132,11 +133,11 @@
 </div>
 </div>
 </span>
-<script src="weather.js"></script>
+<script src="src/weather.js"></script>
   </body>
   <footer>
     <small>
-    Coded by Diana Cabral <a href="https://github.com/DiMeCaCe/SheCodes02a.git"> Github link</a>
+    Coded by Diana Cabral <a href="https://github.com/DiMeCaCe/SheCodes02.git">Github link</a>
     </small>
   </footer>
 </html>
